Work on new 1.0 api